# llm

./: agent_learn.py  chat_glm3_6b.py  chroma_train.py  data_loader_train.py  datasets_train.py  ds_config.json  gradio_train.py  lang_chain_learn.py  langchain_memory.py  langchain_memory_chain.py  linear_regression.py  load_local_model.py  load_model.py  model_deepspeed.py  model_parallel.py  model_train.py  numpy_train.py  opencv_train_blur.py  opencv_train_improve.py  pandas_train.py  peft_train.py  pipeline_train.py  process_long_text.py  process_long_text_with_rag.py  prompts_learn.py  pyproject.toml  qa_streamlit_system.py  qa_system.py  re_train.py  requirements.txt  sentencepiece_train.py  sentencepiece_use.py  sitk_train.py  spm_model.model  spm_model.vocab  streamlit_train.py  test.py  torch_cuda.py  torch_learn.py  transformer_model_train.py  (+3 more)
data/: hello.csv
