[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["CPE-SMARTCITY\\10100 <wang.he@cpe-smartcity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"
tweepy = "^4.14.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
